--- a/style.css
+++ b/style.css
@@ -130,14 +130,14 @@ main{
     margin-inline: 1.5rem;
     margin-bottom: 1.5rem;
 }
-.ver-news>.updates{
+.ver-news>.genz>.updates{
     display: flex;
     flex-direction: column;
     gap: 1rem;
     margin-inline: 1.5rem;
     margin-bottom: 1rem;
 }
-.ver-news>.updates>p:nth-child(1){
+.ver-news>.genz>.updates>p:nth-child(1){
     font-family: inter-bold,sans-serif;
     font-size: 1.2rem;
     a{
@@ -145,19 +145,19 @@ main{
         color: white;
     }
 }
-.ver-news>.updates>p:nth-child(1):hover{
+.ver-news>.genz>.updates>p:nth-child(1):hover{
         a{
         transition: all 0.4s;
         color: hsl(35, 77%, 62%);
     }
 }
-.ver-news>.updates>p:nth-child(2){
+.ver-news>.genz>.updates>p:nth-child(2){
     font-family: inter-regular,sans-serif;
     color: white;
     font-size: 1rem;
 
 }
-.ver-news>hr{
+.ver-news>.genz>hr{
     border: 1px solid white;
     margin-block: 1.5rem;
     margin-inline: 1.5rem;
@@ -165,6 +165,8 @@ main{
 .body2{
     display: grid;
     grid-template-columns: repeat(3,1fr);
+     justify-content: center;
+    align-items: center;
 }
 .body2>.gadgets{
     display: flex;
@@ -212,7 +214,7 @@ main{
 
 
 /* media styling at 600px */
-@media (max-width:600px) {
+@media (min-width:381px) and (max-width:600px) {
 main{
     width: 95%;
 
@@ -306,14 +308,14 @@ main{
     margin-inline: 1.5rem;
     margin-bottom: 2rem;
 }
-.ver-news>.updates{
+.ver-news>.genz>.updates{
     display: flex;
     flex-direction: column;
     gap: 1rem;
     margin-inline: 1.5rem;
     margin-bottom: 1rem;
 }
-.ver-news>.updates>p:nth-child(1){
+.ver-news>.genz>.updates>p:nth-child(1){
     font-family: inter-bold,sans-serif;
     font-size: 1.2rem;
     a{
@@ -321,20 +323,20 @@ main{
         color: white;
     }
 }
-.ver-news>.updates>p:nth-child(1):hover{
+.ver-news>.genz>.updates>p:nth-child(1):hover{
         a{
         transition: all 0.4s;
         color: hsl(35, 77%, 62%);
     }
 }
-.ver-news>.updates>p:nth-child(2){
+.ver-news>.genz>.updates>p:nth-child(2){
     font-family: inter-regular,sans-serif;
     color: white;
     font-size: 1rem;
     line-height: 1.5rem;
     width: 100%;
 }
-.ver-news>hr{
+.ver-news>.genz>hr{
     border: 1px solid white;
     margin-block: 2rem;
     width: 85%;
@@ -344,6 +346,8 @@ main{
     display: grid;
     grid-template-columns: repeat(1,1fr);
     gap: 2rem;
+    justify-content: center;
+    align-items: center;
 }
 .body2>.gadgets{
     display: flex;
@@ -389,4 +393,400 @@ main{
     width: 100%;
 }
 }
+
+/* Max width 380px */
+@media (max-width:380px) {
+    main{
+    width: 95%;
+
+}
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 3rem;
+}
+.hamburger{
+    display: block;
+}
+.navbar>img{
+    width: 45px;
+}
+.navbar>ul{
+    display: none; 
+}  
+.body1{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    height: fit-content;
+    margin-bottom: 4rem;
+}
+.image-news>.image{
+    background-image: url(/assets/images/image-web-3-mobile.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 300px;
+    width: 100%;
+    margin-bottom: 2rem;
+}
+.news2{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.web3{
+    width: 100%;
+    p{
+        font-size: 3rem;
+        font-family: inter-bold,sans-serif;
+        color: hsl(240, 100%, 5%);
+        width: 100%;
+    }
+}
+.news2>.readmore{
+    width: 100%;
+}
+.news2>.readmore>p:nth-child(1){
+    font-family: inter-regular,sans-serif;
+    font-size: 1rem;
+    color: hsl(236, 13%, 42%);
+    line-height: 1.7rem;
+}
+.news2>.readmore>p:nth-child(2){
+    font-family: inter-bold,sans-serif;
+    font-size: 1.3rem;
+    letter-spacing: 0.2rem;
+    margin-top: 1.8rem;
+    text-align: center;
+    padding: 1rem;
+    width: 220px;
+    background-color: hsl(5, 85%, 63%);
+    a{
+        text-decoration: none;
+        color: hsl(240, 100%, 5%);
+    }
+}
+.news2>.readmore>p:nth-child(2):hover{
+    background-color: hsl(240, 100%, 5%);
+    transition: all 0.4s;
+    a{
+        text-decoration: none;
+        color: white;
+        transition: all 0.4s;
+    }
+}
+.ver-news{
+    padding-block: 1rem;
+    width: 100%;
+    background-color:hsl(240, 100%, 5%) ;
+}
+.ver-news>h1{
+    color: hsl(35, 77%, 62%);
+    font-family: inter-bold,sans-serif;
+    font-size: 2.5rem;
+    margin-inline: 1.5rem;
+    margin-bottom: 2rem;
+}
+.ver-news>.genz>.updates{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-inline: 1.5rem;
+    margin-bottom: 1rem;
+}
+.ver-news>.genz>.updates>p:nth-child(1){
+    font-family: inter-bold,sans-serif;
+    font-size: 1.2rem;
+    a{
+        text-decoration: none;
+        color: white;
+    }
+}
+.ver-news>.genz>.updates>p:nth-child(1):hover{
+        a{
+        transition: all 0.4s;
+        color: hsl(35, 77%, 62%);
+    }
+}
+.ver-news>.genz>.updates>p:nth-child(2){
+    font-family: inter-regular,sans-serif;
+    color: white;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    width: 100%;
+}
+.ver-news>.genz>hr{
+    border: 1px solid white;
+    margin-block: 2rem;
+    width: 85%;
+    margin-inline: 1.5rem;
+}
+.body2{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+.body2>.gadgets{
+    display: flex;
+    gap: 1rem;
+    height: fit-content ;
     
+}
+.body2>.gadgets>img{
+    width: 126.14px;
+    height: 160.2px;
+}
+.body2>.gadgets>article{
+    display: flex;
+    flex-direction: column;
+}
+.body2>.gadgets>article>p:nth-child(1){
+    font-size: 2rem;
+    color: hsl(5, 85%, 63%);
+    font-family: inter-bold,sans-serif;
+}
+.body2>.gadgets>article>p:nth-child(2){
+    font-size: 0.8rem;
+    width: fit-content;
+    font-family: inter-bold,sans-serif;
+    a{
+        text-decoration: none;
+        color: hsl(240, 100%, 5%);
+    }
+}
+.body2>.gadgets>article>p:nth-child(2):hover{
+    a{
+        text-decoration: none;
+        color: hsl(5, 85%, 63%);
+        transition: all 0.4s;
+    }
+}
+.body2>.gadgets>article>p:nth-child(3){
+    font-size: 0.75rem;
+    color: hsl(236, 13%, 42%);
+    font-family: inter-bold,sans-serif;
+    width: 100%;
+}
+}
+  
+
+/* media 601 t0 992px */
+@media (min-width:601px) and (max-width:992px){
+body{
+    padding-block: 3rem;
+}
+main{
+    max-width: 992;
+    width: 95%;
+    margin: auto;
+}
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 3rem;
+}
+.hamburger{
+    display: none;
+}
+.navbar>img{
+    width: 45px;
+}
+.navbar>ul{
+    display: flex;
+    gap: 2rem;
+}
+.navbar>ul>li{
+    list-style-type: none;
+    a{
+        text-decoration: none;
+        font-family: inter-regular, sans-serif;
+        color: hsl(236, 13%, 42%);
+    }
+}
+.navbar>ul>li:hover{
+    list-style-type: none;
+    a{
+        text-decoration: none;
+        font-family: inter-regular, sans-serif;
+        color: hsl(5, 85%, 63%);
+        transition: all 0.4s;
+    }
+}
+.body1{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    height: fit-content;
+    margin-bottom: 4rem;
+}
+.image-news>.image{
+    background-image: url(/assets/images/image-web-3-desktop.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 300px;
+    margin-bottom: 2rem;
+}
+.news2{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+.image-news{
+    width: 100%;
+}
+.web3{
+    width: 50%;
+    p{
+        font-size: 3.5rem;
+        font-family: inter-bold,sans-serif;
+        color: hsl(240, 100%, 5%);
+        width: 80%;
+    }
+}
+.news2>.readmore{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.news2>.readmore>p:nth-child(1){
+    font-family: inter-regular,sans-serif;
+    font-size: 1.4rem;
+    color: hsl(236, 13%, 42%);
+    line-height: 2.2rem;
+}
+.news2>.readmore>p:nth-child(2){
+    font-family: inter-bold,sans-serif;
+    font-size: 1.3rem;
+    margin-top: 1.8rem;
+    letter-spacing: 0.2rem;
+    text-align: center;
+    padding: 1rem;
+    width: 280px;
+    background-color: hsl(5, 85%, 63%);
+    a{
+        text-decoration: none;
+        color: hsl(240, 100%, 5%);
+    }
+}
+.news2>.readmore>p:nth-child(2):hover{
+    background-color: hsl(240, 100%, 5%);
+    transition: all 0.4s;
+    a{
+        text-decoration: none;
+        color: white;
+        transition: all 0.4s;
+    }
+}
+.genz{
+    display: flex;
+}
+.ver-news{
+    display: flex;
+    flex-direction: column;
+    padding-block: 1rem;
+    width: 100%;
+    height: 250px;
+    background-color:hsl(240, 100%, 5%) ;
+}
+.ver-news>h1{
+    color: hsl(35, 77%, 62%);
+    text-align: center;
+    font-family: inter-bold,sans-serif;
+    font-size: 2rem;
+    margin-inline: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+.ver-news>.genz>.updates{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-inline: 1.5rem;
+    margin-bottom: 1rem;
+}
+.ver-news>.genz>.updates>p:nth-child(1){
+    font-family: inter-bold,sans-serif;
+    font-size: 1.2rem;
+    a{
+        text-decoration: none;
+        color: white;
+    }
+}
+.ver-news>.genz>.updates>p:nth-child(1):hover{
+        a{
+        transition: all 0.4s;
+        color: hsl(35, 77%, 62%);
+    }
+}
+.ver-news>.genz>.updates>p:nth-child(2){
+    font-family: inter-regular,sans-serif;
+    color: white;
+    font-size: 1rem;
+
+}
+.ver-news>hr{
+    border: 1px solid white;
+    margin-block: 1.5rem;
+    margin-inline: 1.5rem;
+}
+.body2{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+     justify-content: center;
+    align-items: center;
+}
+.body2>.gadgets{
+    display: flex;
+    gap: 0.5rem;
+    height: fit-content ;
+    
+}
+.body2>.gadgets>img{
+    width: 126.14px;
+    height: 160.2px;
+}
+.body2>.gadgets>article{
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+}
+.body2>.gadgets>article>p:nth-child(1){
+    font-size: 2rem;
+    color: hsl(5, 85%, 63%);
+    font-family: inter-bold,sans-serif;
+}
+.body2>.gadgets>article>p:nth-child(2){
+    font-size: 0.8rem;
+    width: fit-content;
+    font-family: inter-bold,sans-serif;
+    a{
+        text-decoration: none;
+        color: hsl(240, 100%, 5%);
+    }
+}
+.body2>.gadgets>article>p:nth-child(2):hover{
+    a{
+        text-decoration: none;
+        color: hsl(5, 85%, 63%);
+        transition: all 0.4s;
+    }
+}
+.body2>.gadgets>article>p:nth-child(3){
+    font-size: 0.7rem;
+    color: hsl(236, 13%, 42%);
+    font-family: inter-bold,sans-serif;
+    line-height: 1.2rem;
+    width: 80%;
+}
+
+
+
+
+}
